# C-VisualEngineer

./: .env.example  .gitignore  README.md  animation_generator - 副本.py  animation_generator.py  bridge.py  colab_run.ipynb  colab_run_tts.py  config.py  emoji_map_video.py  gen_test_contours.py  multi_agent_video.py  run_pipeline.sh  scene_generator.py  setup.sh  storyboard_example.json  test_smoke.py  video_composer.py  新建 DOCX 文档.docx
map2video-B/map2video-B/: .env.example
map2video-B/map2video-B/tests/: test_inventory.py  test_search.py
map2video-Parta/map2video-Parta/servers/: map_vision_server.py
map2video-Parta/map2video-Parta/tests/: test_llm.py
map2video-main/map2video-main/: .gitignore  pyproject.toml
map2video-main/map2video-main/servers/: culture_rag_server.py
map2video-main/map2video-main/src/mapgen/rag/: search.py
map2video-main/map2video-main/src/mapgen/vision/: contours.py
map2video-main/map2video-main/tests/: test_contours.py  test_recognition.py
src/mapgen/: __init__.py  config.py
src/mapgen/culture/: __init__.py  data.py  planner.py
src/mapgen/drawing/: __init__.py  api.py
src/mapgen/layout/: __init__.py  scatter.py
src/mapgen/llm/: __init__.py  openai_compatible.py
src/mapgen/media/: __init__.py  ffmpeg.py  pipeline.py  subtitles.py  tts.py  video.py
src/mapgen/place/: __init__.py  osm.py
src/mapgen/rag/: inventory.py  search.py
src/mapgen/storyboard/: generate_narration.py  generate_prompts.py  generate_storyboard.py  qa_check.py
src/mapgen/video/: __init__.py  composer.py  motion.py
(+7 files in other folders)
